# Petra-M--RF

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  testrelease.yml
petram/phys/common/: em_base.py  rf_dispersion_coldplasma.py  rf_dispersion_coldplasma_numba.py  rf_dispersion_lkplasma.py  rf_dispersion_lkplasma_numba.py  rf_lk_term_panel.py  rf_port_scanner.py  rf_stix_terms_panel.py
petram/phys/em1d/: em1d_anisotropic.py  em1d_coldplasma.py  em1d_lkplasma.py  em1d_model.py  em1d_port.py  em1d_vac.py
petram/phys/em2d/: em2d_anisotropic.py  em2d_coldplasma.py  em2d_h.py  em2d_lkplasma.py  em2d_model.py  em2d_vac.py
petram/phys/em2da/: em2da_anisotropic.py  em2da_coldplasma.py  em2da_extj.py  em2da_lkplasma.py  em2da_model.py  em2da_port.py  em2da_vac.py
petram/phys/em3d/: em3d_anisotropic.py  em3d_coldplasma.py  em3d_extj.py  em3d_h.py  em3d_lkplasma.py  em3d_model.py  em3d_port.py  em3d_portload.py  em3d_portmode.py  em3d_vac.py  em3d_z.py
python/petram/phys/common/: em_base.py  rf_dispersion_coldplasma.py  rf_dispersion_lkplasma.py  rf_port_scanner.py
python/petram/phys/em1d/: em1d_anisotropic.py  em1d_model.py  em1d_port.py  em1d_vac.py
python/petram/phys/em2d/: em2d_h.py  em2d_model.py  em2d_vac.py
python/petram/phys/em2da/: em2da_anisotropic.py  em2da_e.py  em2da_extj.py  em2da_h.py  em2da_surfj.py
python/petram/phys/em3d/: em3d_model.py  em3d_pml.py  em3d_portarray.py  em3d_portload.py  em3d_portmode.py  em3d_surfj.py
